--- a/config_sample.env
+++ b/config_sample.env
@@ -1,5 +1,4 @@
 #Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
 BOT_TOKEN = ""
@@ -18,7 +17,7 @@ USE_SERVICE_ACCOUNTS = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-STOP_DUPLICATE_MIRROR = ""
+STOP_DUPLICATE_MIRROR = "true"
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
 BUTTON_THREE_NAME = ""
